add basic outline for SessionComponent

--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -1,3 +1,3 @@
-<p>
-  session works!
-</p>
+<mat-grid-list cols="3" rowHeight="4:3">
+  <!--one window component per item in the windows array-->
+</mat-grid-list>
