add basic outline for WindowComponent

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,3 +1,15 @@
-<p>
-  window works!
-</p>
+<mat-card>
+  <!--EXAMPLE: https://stackoverflow.com/questions/46690710/angular-material-how-to-create-floating-card-toolbar-layout-->
+
+  <mat-card-header>
+    <!--page name and favicon-->
+    <mat-card-title></mat-card-title>
+
+    <!--empty space to be used as a "handle" for the tab-->
+
+    <!--button for closing tab-->
+  </mat-card-header>
+
+  <!--tab screenshot-->
+  <!--<img mat-card-image src="">-->
+</mat-card>
