add toolbar buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar color="primary">
   <span>Sort those Tabs</span>
+  <span class="spacer"></span>
+  <button mat-button>Apply Changes</button>
+  <button mat-button color="warn">Reset</button>
 </mat-toolbar>
 
 <app-session></app-session>
