update component outlines
- note future usages of input bindings and *ngFor
- note window card design
- add a grid list to window component in order to display each tab

--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -1,3 +1,7 @@
 <mat-grid-list cols="3" rowHeight="4:3">
-  <!--one window component per item in the windows array-->
+  <!--*ngFor="<each window in the current session>"-->
+  <mat-grid-tile>
+    <!--window input binding-->
+    <app-window></app-window>
+  </mat-grid-tile>
 </mat-grid-list>
