temp: style window card size

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card id="root-card">
   <!--EXAMPLE: https://stackoverflow.com/questions/46690710/angular-material-how-to-create-floating-card-toolbar-layout-->
 
   <!--header-body design example: angular material component sample containers-->
@@ -12,7 +12,7 @@
   <mat-grid-list cols="3" rowHeight="5:4">
     <!--*ngFor="<each tab screenshot>"-->
     <mat-grid-tile>
-      <mat-card>
+      <mat-card id="inner-card">
         <mat-card-header>
           <!--page name and favicon-->
           <mat-card-title></mat-card-title>
