show favicon on tab card instead of screenshot

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -24,7 +24,7 @@
           </button>
         </mat-card-header>
 
-        <!--<img mat-card-image class="tab-screenshot">-->
+        <!--show tab favicon-->
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
