--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -1,7 +1,5 @@
 <mat-grid-list cols="3" rowHeight="4:3">
-  <!--*ngFor="<each window in the current session>"-->
-  <mat-grid-tile>
-    <!--window input binding-->
-    <app-window></app-window>
+  <mat-grid-tile *ngFor="let window of data">
+    <app-window [data]="window"></app-window>
   </mat-grid-tile>
 </mat-grid-list>
