implement basic gui without Angular Material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<mat-toolbar color="primary">
-  <span>Sort those Tabs</span>
-  <span class="spacer"></span>
-  <button mat-button>Apply Changes</button>
-  <button mat-button color="warn">Reset</button>
-</mat-toolbar>
+<div class="navbar">
+  <h2>Sort those Tabs</h2>
+  <button>Apply Changes</button>
+  <button>Reset</button>
+</div>
 
-<!--all windows input binding-->
-<app-session></app-session>
+<div class="main">
+  <!--all windows input binding-->
+  <app-session></app-session>
+</div>
