--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,32 +1,7 @@
-<mat-card id="root-card">
-  <!--header-body design example: angular material component sample containers-->
-
-  <mat-card-header>
-    <span class="spacer"></span>
-    <button mat-icon-button>
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-card-header>
-
-  <mat-grid-list cols="3" rowHeight="5:4">
-    <!--*ngFor="<each tab screenshot>"-->
-    <mat-grid-tile *ngFor="let tab of data.tabs">
-      <mat-card id="inner-card">
-        <mat-card-header>
-          <!--page name and favicon-->
-          <mat-card-title class="tab-title">{{ tab.title }}</mat-card-title>
-
-          <span class="spacer"></span>
-
-          <!--mini icon button that shows on hover-->
-          <button mat-icon-button>
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-card-header>
-
-        <!--show tab favicon-->
-        <img src="{{ tab.favIconUrl }}">
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-</mat-card>
+<div>
+  <div class="tab-grid" [sortablejs]="data.tabs">
+    <div class="tab-box" *ngFor="let tab of data.tabs">
+      {{ tab.title }}
+    </div>
+  </div>
+</div>
