Revert "remove sortablejs"
This reverts commit cede626189daea3080b1150ba3c1fad6eab09cf2.

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="tab-grid">
+  <div class="tab-grid" [sortablejs]="data.tabs">
     <div class="tab-box" *ngFor="let tab of data.tabs">
       {{ tab.title }}
     </div>
