implement detaching of tabs
- add an onEnd() listener to each sortable-js instance
  - requires migration of sortablejs-settings from modules declaration to sortablejs component class
- add onEdited() listener, where the extra empty window is added and removed as needed
- update SortingSession.applyChanges() so that empty windows are removed and data is reloaded

--- a/src/app/session/sorting-session.component.html
+++ b/src/app/session/sorting-session.component.html
@@ -1,5 +1,5 @@
 <div class="window-grid">
   <div class="window-box" *ngFor="let window of sortingSessionService.data">
-    <app-window [data]="window"></app-window>
+    <app-window [data]="window" (onEdited)="onEdited()"></app-window>
   </div>
 </div>
