--- a/src/app/session/sorting-session.component.css
+++ b/src/app/session/sorting-session.component.css
@@ -1,10 +1,14 @@
 .window-grid {
   display: grid;
-
-  /* TODO size based on screen size*/
-  grid-template-columns: 400px 400px 400px;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-rows: 300px;
   grid-gap: 10px;
 
   background-color: #ffffff;
   color: #444444;
+}
+
+.window-box {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
