--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -1,8 +1,7 @@
 .tab-grid {
   display: grid;
-
-  /* TODO size based on screen size*/
-  grid-template-columns: 100px 100px 100px;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-auto-rows: 120px;
   grid-gap: 10px;
 
   background-color: #ffffff;
