revise layout for top-menu/navbar
- move buttons to right side of screen
- add button spacing
- align buttons vertically

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<div class="navbar">
-  <h2>Sort those Tabs</h2>
-  <button (click)="session.applyChanges()">Apply Changes</button>
-  <button (click)="session.resetChanges()">Reset</button>
+<div class="top-menu container">
+    <input type="button" class="button" (click)="session.applyChanges()" value="Apply Changes">
+    <input type="button" class="button" (click)="session.resetChanges()" value="Reset">
 </div>
 
-<div class="main">
+<div class="main-content">
   <!--all windows input binding-->
   <app-session #session></app-session>
 </div>
