--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,23 @@
-.navbar {
-  overflow: hidden;
-  background-color: #333333;
+.top-menu {
+  width: 100%;
+
+  height: 50px;
   position: fixed;
   top: 0;
-  width: 100%;
+
+  background-color: #333333;
 }
 
-.navbar > h2 {
-  display: inline;
+.container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.main {
-  margin-top: 30px;
+.button {
+  margin-right: 10px;
+}
+
+.main-content {
+  margin-top: 60px;
 }
