--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="top-menu container">
-    <input type="button" class="button" (click)="session.applyChanges()" value="Apply Changes">
-    <input type="button" class="button" (click)="session.resetChanges()" value="Reset">
+    <input class="button" type="button" (click)="session.applyChanges()" value="Apply Changes">
+    <input class="button" type="button" (click)="session.resetChanges()" value="Reset">
 </div>
 
 <div class="main-content">
