prevent hiding of empty sortablejs instance

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="tab-grid" [sortablejs]="data.tabs" [sortablejsOptions]="options">
+  <div class="tab-grid sortable" [sortablejs]="data.tabs" [sortablejsOptions]="options">
     <div class="tab-box" *ngFor="let tab of data.tabs">
       <div class="header absolute">
         <p class="tab-title truncate">{{ tab.title }}</p>
