--- a/src/app/sorting-session/sorting-session.component.css
+++ b/src/app/sorting-session/sorting-session.component.css
@@ -3,13 +3,12 @@
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-auto-rows: 300px;
   grid-gap: 10px;
-
-  background-color: #ffffff;
-  color: #444444;
 }
 
 .window-box {
   overflow-y: auto;
   overflow-x: hidden;
   padding: 10px;
+
+  background-color: #ccc;
 }
