make extension tab unclosable

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -3,7 +3,9 @@
     <div class="tab-box" *ngFor="let tab of data.tabs">
       <div class="header absolute">
         <p class="tab-title truncate">{{ tab.title }}</p>
-        <input class="close-button" type="button" (click)="onCloseButtonClicked(tab.id)">
+
+        <!--title 'SortThoseTabs' defined in index.html-->
+        <input *ngIf="tab.title !== 'SortThoseTabs'" class="close-button" type="button" (click)="onCloseButtonClicked(tab.id)">
       </div>
       <div class="body">
         <img src="{{ tab.favIconUrl }}">
