apply special styles for last window and extension tab

--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -19,6 +19,16 @@
   background-color: #444;
 }
 
+.extension-tab-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  padding: 7px;
+
+  background-color: #666;
+}
+
 .tab-box > .header {
   flex-shrink: 0;
 
