change close button hover region to entire tab-box

--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -60,7 +60,7 @@
   height: 100%;
 }
 
-.header:hover > .close-button, .close-button:hover {
+.tab-box:hover .close-button, .close-button:hover {
   display: initial;
 }
 
