--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,11 +1,12 @@
 <div class="container">
   <div class="tab-grid sortable" [sortablejs]="data.tabs" [sortablejsOptions]="options">
-    <div [className]="tab.title === 'SortThoseTabs' ? 'extension-tab-box' : 'tab-box'" *ngFor="let tab of data.tabs">
+    <!--title 'SortThoseTabs' defined in index.html-->
+    <div [className]="tab.title === 'Sort those Tabs' ? 'extension-tab-box' : 'tab-box'" *ngFor="let tab of data.tabs">
       <div class="header absolute">
         <p class="tab-title truncate">{{ tab.title }}</p>
 
         <!--title 'SortThoseTabs' defined in index.html-->
-        <input *ngIf="tab.title !== 'SortThoseTabs'" class="close-button" type="button" (click)="onCloseButtonClicked(tab.id)">
+        <input *ngIf="tab.title !== 'Sort those Tabs'" class="close-button" type="button" (click)="onCloseButtonClicked(tab.id)">
       </div>
       <div class="body">
         <img src="{{ tab.favIconUrl }}">
