--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -6,12 +6,12 @@
 
   <div class="window-body">
     <div class="tab-grid" [sortablejs]="data.tabs" [sortablejsOptions]="options">
-      <!--title 'SortThoseTabs' defined in index.html-->
+      <!--title 'Sort those Tabs' defined in index.html-->
       <div [className]="tab.title === 'Sort those Tabs' ? 'extension-tab-box' : 'tab-box'" *ngFor="let tab of data.tabs">
         <div class="tab-header absolute">
           <p class="tab-title truncate">{{ tab.title }}</p>
 
-          <!--title 'SortThoseTabs' defined in index.html-->
+          <!--title 'Sort those Tabs' defined in index.html-->
           <input *ngIf="tab.title !== 'Sort those Tabs'"
                  class="close-tab-button"
                  type="button"
