adjust layout for window grid and window header

--- a/src/app/sorting-session/sorting-session.component.css
+++ b/src/app/sorting-session/sorting-session.component.css
@@ -1,7 +1,7 @@
 .window-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-auto-rows: 300px;
+  grid-template-columns: repeat(auto-fill, minmax(30vw, 1fr));
+  grid-auto-rows: 40vh;
   grid-gap: 10px;
 }
 
