--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -48,12 +48,6 @@
 }
 
 .extension-tab-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-
-  padding: 7px;
-
   background-color: #666;
 }
 
@@ -62,6 +56,11 @@
 
   margin-bottom: 5px;
   padding: var(--padding);
+}
+
+.tab-box > .extension-tab-header {
+  /*lighter version of --light-accent-color*/
+  background-color: #808c8f;
 }
 
 .absolute {
