--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -18,6 +18,18 @@
   background-color: #333;
 }
 
+.close-window-button {
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  background-color: var(--main-brand-color);
+}
+
+.close-window-button:hover {
+  background-color: #fff;
+}
+
 .window-body {
   overflow-y: auto;
   overflow-x: hidden;
@@ -79,16 +91,30 @@
 }
 
 .close-tab-button {
-  display: none;
+  display: initial;
+  opacity: 0;
 
   position: absolute;
-  top: var(--padding);
-  right: var(--padding);
-  bottom: var(--padding);
+  top: 0;
+  right: 0;
+  bottom: 0;
+
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+
+  /*rgba should be same colour as tab-header background*/
+  background: linear-gradient(to left, rgba(250, 250, 250, 0.6), transparent);
 }
 
-.tab-box:hover .close-tab-button, .close-tab-button:hover {
-  display: initial;
+/*FIXME: not being applied*/
+.close-tab-button:hover {
+  opacity: 1;
+}
+
+.tab-box:hover .close-tab-button {
+  opacity: 0.7;
 }
 
 .tab-box > .tab-body {
