--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,10 +1,11 @@
 <div class="container">
   <!--hide the header if this is an empty window-->
   <div *ngIf="data.tabs.length !== 0" class="window-header">
-    <input class="close-window-button"
-           type="button"
+    <button class="close-window-button"
            title="Close this window"
            (click)="onCloseWindowButtonClicked(data.id)">
+      <i class="fa fa-close"></i>
+    </button>
   </div>
 
   <div class="window-body">
@@ -19,11 +20,12 @@
           </div>
 
           <!--title 'Sort those Tabs' defined in index.html-->
-          <input *ngIf="tab.title !== 'Sort those Tabs'"
+          <button *ngIf="tab.title !== 'Sort those Tabs'"
                  class="close-tab-button"
-                 type="button"
                  title="Close this tab"
                  (click)="onCloseTabButtonClicked(tab.id)">
+            <i class="fa fa-close"></i>
+          </button>
         </div>
         <div class="tab-body">
           <img src="{{ tab.favIconUrl }}">
