--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
-
 body {
   margin: 0;
   font-family: Roboto, sans-serif;
+  background-color: #eef3f3;
 }
 
 .spacer {
   flex: 1 1 auto;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  /*background: #ececec;*/
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c0c0c0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #cdcdcd;
 }
