--- a/src/app/sorting-session/sorting-session.component.html
+++ b/src/app/sorting-session/sorting-session.component.html
@@ -1,5 +1,7 @@
 <div class="window-grid">
-  <div class="window-box" *ngFor="let window of sortingSessionService.data">
+  <div class="window-box"
+       *ngFor="let window of sortingSessionService.data"
+       [@removal]="window.state">
     <app-window [data]="window"
                 (onTabMoved)="onTabMoved()"
                 (onTabClosed)="onTabClosed($event)"
