--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,13 @@
 .top-menu {
-  width: 100%;
+  width: calc(100% - 2*10px);
   height: 50px;
   position: fixed;
   top: 0;
 
   /*always on top*/
   z-index: 1000;
+
+  padding: 0 10px;
 
   background-color: #7690eb;
   box-shadow: 0px 1px 2px 2px #ccc;
