update top-menu buttons' text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="top-menu container">
-    <input class="button" type="button" (click)="sortingSession.applyChanges()" value="Apply Changes">
-    <input class="button" type="button" (click)="sortingSession.resetChanges()" value="Reset">
+    <input class="button" type="button" (click)="sortingSession.applyChanges()" value="APPLY">
+    <input class="button" type="button" (click)="sortingSession.resetChanges()" value="RESET">
 </div>
 
 <div class="main-content">
