--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -85,7 +85,7 @@
   margin-bottom: 5px;
   padding: var(--padding);
 
-  background-color: #ccc;
+  background-color: #e2e2e2;
 }
 
 .extension-tab-header {
