wait for window closed animation to complete using animation callback

--- a/src/app/sorting-session/sorting-session.component.html
+++ b/src/app/sorting-session/sorting-session.component.html
@@ -1,7 +1,8 @@
 <div class="window-grid">
   <div class="window-box"
        *ngFor="let window of sortingSessionService.data; let i = index"
-       [@removal]="states[i]">
+       [@removal]="states[i]"
+       (@removal.done)="onAnimationStateChange($event, window.id)">
     <app-window [data]="window"
                 (onTabMoved)="onTabMoved()"
                 (onTabClosed)="onTabClosed($event)"
