removed unneeded windowId parameter from WindowComponent.onCloseWindowButtonClicked()

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="data.tabs.length !== 0" class="window-header">
     <button class="close-window-button"
            title="Close this window"
-           (click)="onCloseWindowButtonClicked(data.id)">
+           (click)="onCloseWindowButtonClicked()">
       <i class="fa fa-close"></i>
     </button>
   </div>
