--- a/src/app/sorting-session/sorting-session.component.html
+++ b/src/app/sorting-session/sorting-session.component.html
@@ -1,11 +1,11 @@
 <div class="window-grid">
   <div class="window-box"
-       *ngFor="let window of sortingSessionService.data; let i = index"
-       [@removal]="states[i]"
+       *ngFor="let window of _sortingSessionService.data; let i = index"
+       [@removal]="_states[i]"
        (@removal.done)="onAnimationStateChange($event, window.id)">
     <app-window [data]="window"
-                (onTabMoved)="onTabMoved()"
-                (onTabClosed)="onTabClosed($event)"
-                (onWindowClosed)="onWindowClosed($event)"></app-window>
+                (_onTabMoved)="onTabMoved()"
+                (_onTabRemoved)="onTabRemoved($event)"
+                (_onWindowRemoved)="onWindowRemoved($event)"></app-window>
   </div>
 </div>
